--- a/sample.bib
+++ b/sample.bib
@@ -1,153 +1,258 @@
-@Misc{CHINOSAUR:venue,
-  author =       {@\_CHINOSAUR},
-  key =          {_CHINOSAUR},
-  howpublished = {Tweet},
-  title =        {VENUE IS TOO COLD. \#BINGO \#CHI2016},
-  month =        {May},
-  day =          1,
-  year =         2015,
-  note =         {Retrieved Febuary 2, 2014 from
-                  \url{https://twitter.com/_CHINOSAUR/status/461864317415989248}},
-  annote =       {Tweet}
+% === DEFINITELY USED CHI2015 === :
+@inproceedings{baudisch2001focus,
+  title={Focus plus context screens: combining display technology with visualization techniques},
+  author={Baudisch, Patrick and Good, Nathaniel and Stewart, Paul},
+  booktitle={Proceedings of the 14th annual ACM symposium on User interface software and technology},
+  pages={31--40},
+  year={2001},
+  organization={ACM}
 }
 
-@inproceedings{Klemmer:2002:WSC:503376.503378,
-  author =       {Klemmer, Scott R. and Thomsen, Michael and
-                  Phelps-Goodman, Ethan and Lee, Robert and Landay,
-                  James A.},
-  title =        {Where Do Web Sites Come from?: Capturing and
-                  Interacting with Design History},
-  booktitle =    {Proceedings of the SIGCHI Conference on Human
-                  Factors in Computing Systems},
-  series =       {CHI '02},
-  year =         2002,
-  isbn =         {1-58113-453-3},
-  location =     {Minneapolis, Minnesota, USA},
-  pages =        {1--8},
-  numpages =     8,
-  url =          {http://doi.acm.org/10.1145/503376.503378},
-  doi =          {10.1145/503376.503378},
-  acmid =        503378,
-  publisher =    {ACM},
-  address =      {New York, NY, USA},
-  keywords =     {CSCW, activity capture, design rationale, history
-                  management, informal interfaces, sketching, tangible
-                  UI, web design},
+@article{cockburn2014supporting,
+  title={Supporting Novice to Expert Transitions in User Interfaces},
+  author={Cockburn, Andy and Gutwin, Carl and Scarr, Joey and Malacria, Sylvain},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={47},
+  number={2},
+  pages={31},
+  year={2014},
+  publisher={ACM}
 }
 
-@inproceedings{Mather:2000:MUT,
-  title =        {Making up titles for conference papers},
-  author =       {Mather, B. D.},
-  booktitle =    {Ext. Abstracts CHI 2000},
-  year =         2000,
-  publisher =    "ACM Press",
-  pages =        "1-2",
+@article{kay2012creating,
+  title={Creating personalized systems that people can scrutinize and control: Drivers, principles and experience},
+  author={Kay, Judy and Kummerfeld, Bob},
+  journal={ACM Transactions on Interactive Intelligent Systems (TiiS)},
+  volume={2},
+  number={4},
+  pages={24},
+  year={2012},
+  publisher={ACM}
 }
 
-@book{Schwartz:1995:GBF,
-  title =        {Guidelines for Bias-Free Writing},
-  author =       {Marilyn Schwartz},
-  address =      {Bloomington, IN, USA},
-  year =         1995,
-  publisher =    {ERIC}
+@book{morrison2010flow,
+  title={Flow-Based Programming: A new approach to application development},
+  author={Morrison, J Paul},
+  year={2010},
+  publisher={CreateSpace}
 }
 
-@inproceedings{Zellweger:2001:FAO:504216.504224,
-  author =       {Zellweger, Polle T. and Bouvin, Niels Olof and
-                  Jeh{\o}j, Henning and Mackinlay, Jock D.},
-  title =        {Fluid annotations in an open world},
-  booktitle =    {Proc. Hypertext 2001},
-  year =         2001,
-  pages =        {9--18},
-  publisher =    {ACM Press},
+@article{nahum2015building,
+  title={Building health behavior models to guide the development of just-in-time adaptive interventions: a pragmatic framework},
+  author={Nahum-Shani, Inbal and Hekler, E and Spruijt-Metz, Donna},
+  journal={To Appear in Health Psychology}
 }
 
-@misc{acm_categories,
-  key =          "ACM",
-  author =       {ACM},
-  title =        {How to Classify Works Using ACM's Computing
-                  Classification System},
-  year =         1998,
-  note =         {\url{http://www.acm.org/class/how_to_use.html}},
+% === MAYBE USED (from ICHI2015) === :
+@article{beim2009inverse,
+  title={Inverse problems in dynamic cognitive modeling},
+  author={beim Graben, Peter and Potthast, Roland},
+  journal={Chaos: An Interdisciplinary Journal of Nonlinear Science},
+  volume={19},
+  number={1},
+  pages={015103},
+  year={2009},
+  publisher={AIP Publishing}
 }
 
-@Misc{cavender:writing,
-  author =       {Anna Cavender and Shari Trewin and Vicki Hanson},
-  title =        {Accessible Writing Guide},
-  year =         2014,
-  day =          22,
-  note =
-                  {\url{http://www.sigaccess.org/welcome-to-sigaccess/resources/accessible-writing-guide/}},
-  annote =       {URL}
+@article{blinov2004bionetgen,
+  title={BioNetGen: software for rule-based modeling of signal transduction based on the interactions of molecular domains},
+  author={Blinov, Michael L and Faeder, James R and Goldstein, Byron and Hlavacek, William S},
+  journal={Bioinformatics},
+  volume={20},
+  number={17},
+  pages={3289--3291},
+  year={2004},
+  publisher={Oxford Univ Press}
 }
 
-@article{ethics,
-  title =        {{Social Impacts of Computing: Codes of Professional
-                  Ethics}},
-  author =       {Ronald E. Anderson},
-  doi =          "10.1177/089443939201000402",
-  journal =      "Social Science Computer Review December",
-  year =         1992,
-  volume =       10,
-  number =       4,
-  pages =        "453-469"
+@inproceedings{brailsford2010towards,
+  title={Towards the holy grail: combining system dynamics and discrete-event simulation in healthcare},
+  author={Brailsford, Sally C and Desai, Shivam M and Viana, Joe},
+  booktitle={Simulation Conference (WSC), Proceedings of the 2010 Winter},
+  pages={2293--2303},
+  year={2010},
+  organization={IEEE}
 }
 
-@Misc{heilig:sensorama,
-  author =       {Morton L. Heilig},
-  title =        {Sensorama Simulator},
-  howpublished = {U.S. Patent 3,050,870},
-  month =        {August},
-  day =          28,
-  year =         1962,
-  note =         {Filed Februrary 22, 1962.},
-  annote =       {is this right?}
-},
-
-@article{kaye:puc,
-  year =         2014,
-  issn =         {1617-4909},
-  journal =      {Personal and Ubiquitous Computing},
-  volume =       18,
-  number =       4,
-  doi =          {10.1007/s00779-014-0773-4},
-  title =        {Special issue on science fiction and ubiquitous
-                  computing},
-  url =          {http://dx.doi.org/10.1007/s00779-014-0773-4},
-  publisher =    {Springer London},
-  author =       {Kaye, Jofish and Dourish, Paul},
-  pages =        {765-766},
-  language =     {English}
+@article{collins2004,
+  title={A conceptual framework for adaptive preventive interventions},
+  author={Collins, Linda M and Murphy, Susan A and Bierman, Karen L},
+  journal={Prevention science},
+  volume={5},
+  number={3},
+  pages={185--196},
+  year={2004},
+  publisher={Springer}
 }
 
-@Misc{psy:gangnam,
-  author =       {Psy},
-  title =        {Gangnam Style},
-  howpublished = {Video},
-  month =        {July},
-  day =          15,
-  year =         2012,
-  note =         {Retrieved August 22, 2014 from
-                  \url{https://www.youtube.com/watch?v=9bZkp7q19f0}},
-  annote =       {Video URL}
+@inproceedings{dong2012dynamical,
+  title={A dynamical systems model for improving gestational weight gain behavioral interventions},
+  author={Dong, Yuwen and Rivera, Daniel E and Thomas, Diana M and Navarro-Barrientos, Jes{\'u}s E and Downs, Danielle S and Savage, Jennifer S and Collins, Linda M},
+  booktitle={American Control Conference (ACC), 2012},
+  pages={4059--4064},
+  year={2012},
+  organization={IEEE}
 }
 
-@PhdThesis{sutherland:sketchpad,
-  author =       {Ivan E. Sutherland},
-  title =        {Sketchpad, a Man-Machine Graphical Communication
-                  System},
-  school =       {Massachusetts Institute of Technology},
-  year =         1963,
-  address =      {Cambridge, MA},
+@inproceedings{martin2014dynamical,
+  title={A dynamical systems model of social cognitive theory},
+  author={Martin, Cesar A and Rivera, Daniel E and Riley, William T and Hekler, Eric B and Buman, Matthew P and Adams, Marc A and King, Abby C},
+  booktitle={American Control Conference (ACC), 2014},
+  pages={2407--2412},
+  year={2014},
+  organization={IEEE}
 }
 
-@InBook{winner:politics,
-  author =       {Langdon Winner},
-  title =        {The Social Shaping of Technology},
-  chapter =      {Do artifacts have politics?},
-  publisher =    {Open University Press},
-  year =         1999,
-  address =      {UK},
-  edition =      {2nd},
-  pages =        {28--40},
+@article{chen2013open,
+  title={Open source Ch Control System Toolkit and web-based control system design for teaching automatic control of linear time-invariant systems},
+  author={Chen, Bo and Chou, Yu-Cheng and Cheng, Harry H},
+  journal={Computer Applications in Engineering Education},
+  volume={21},
+  number={1},
+  pages={95--112},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+@article{eberlein1992understanding,
+  title={Understanding models with vensim™},
+  author={Eberlein, Robert L and Peterson, David W},
+  journal={European journal of operational research},
+  volume={59},
+  number={1},
+  pages={216--219},
+  year={1992},
+  publisher={Elsevier}
+}
+
+@book{gluck2006modeling,
+  title={Modeling human behavior with integrated cognitive architectures: Comparison, evaluation, and validation},
+  author={Gluck, Kevin A and Pew, Richard W},
+  year={2006},
+  publisher={Psychology Press}
+}
+
+@inproceedings{hekler2013,
+  title={Mind the theoretical gap: interpreting, using, and developing behavioral theory in HCI research},
+  author={Hekler, Eric B and Klasnja, Predrag and Froehlich, Jon E and Buman, Matthew P},
+  booktitle={Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+  pages={3307--3316},
+  year={2013},
+  organization={ACM}
+}
+
+@article{le2001stochsim,
+  title={STOCHSIM: modelling of stochastic biomolecular processes},
+  author={Le Novere, Nicolas and Shimizu, Thomas Simon},
+  journal={Bioinformatics},
+  volume={17},
+  number={6},
+  pages={575--576},
+  year={2001},
+  publisher={Oxford Univ Press}
+}
+
+@inproceedings{li2006survey,
+  title={A survey of emergent behavior and its impacts in agent-based systems},
+  author={Li, Zhengping and Sim, Cheng Hwee and Low, Malcolm Yoke Hean},
+  booktitle={Industrial Informatics, 2006 IEEE International Conference on},
+  pages={1295--1300},
+  year={2006},
+  organization={IEEE}
+}
+
+@inproceedings{macal2011introductory,
+  title={Introductory tutorial: Agent-based modeling and simulation},
+  author={Macal, Charles M and North, Michael J},
+  booktitle={Simulation Conference (WSC), Proceedings of the 2011 Winter},
+  pages={1451--1464},
+  year={2011},
+  organization={IEEE}
+}
+
+@article{metzger2011survey,
+  title={A survey on applications of agent technology in industrial process control},
+  author={Metzger, Mieczyslaw and Polakow, Grzegorz},
+  journal={Industrial Informatics, IEEE Transactions on},
+  volume={7},
+  number={4},
+  pages={570--581},
+  year={2011},
+  publisher={IEEE}
+}
+
+@article{nahum2014,
+  title={Just in time adaptive interventions (jitais): An organizing framework for ongoing health behavior support},
+  author={Nahum-Shani, Inbal and Smith, Shawna N and Tewari, Ambuj and Witkiewitz, Katie and Collins, Linda M and Spring, Bonnie and Murphy, S},
+  journal={Methodology Center technical report},
+  number={14-126},
+  year={2014}
+}
+
+@misc{nielsen2000,
+  title={Why you only need to test with 5 users},
+  author={Nielsen, Jakob},
+  year={2000},
+  publisher={Alertbox}
+}
+
+@inproceedings{nutaro2011designing,
+  title={Designing power system simulators for the smart grid: Combining controls, communications, and electro-mechanical dynamics},
+  author={Nutaro, James},
+  booktitle={Power and Energy Society General Meeting, 2011 IEEE},
+  pages={1--5},
+  year={2011},
+  organization={IEEE}
+}
+
+@article{mcmillan2011simulations,
+  title={Simulations of dense stellar systems with the AMUSE software toolkit},
+  author={McMillan, Stephen and Zwart, Simon Portegies and van Elteren, Arjen and Whitehead, Alfred},
+  journal={arXiv preprint arXiv:1111.3987},
+  year={2011}
+}
+
+@book{picard2000affective,
+  title={Affective computing},
+  author={Picard, Rosalind W},
+  year={2000},
+  publisher={MIT press}
+}
+
+@article{riley2011health,
+  title={Health behavior models in the age of mobile interventions: are our theories up to the task?},
+  author={Riley, William T and Rivera, Daniel E and Atienza, Audie A and Nilsen, Wendy and Allison, Susannah M and Mermelstein, Robin},
+  journal={Translational behavioral medicine},
+  volume={1},
+  number={1},
+  pages={53--71},
+  year={2011},
+  publisher={Springer}
+}
+
+
+@inproceedings{schilit1994context,
+  title={Context-aware computing applications},
+  author={Schilit, Bill and Adams, Norman and Want, Roy},
+  booktitle={Mobile Computing Systems and Applications, 1994. WMCSA 1994. First Workshop on},
+  pages={85--90},
+  year={1994},
+  organization={IEEE}
+}
+
+@article{uhlig1995toolkit,
+  title={A toolkit for analyzing nonlinear dynamic stochastic models easily},
+  author={Uhlig, Harald F and others},
+  year={1995},
+  publisher={Institute for Empirical Macroeconomics, Federal Reserve Bank of Minneapolis}
+}
+
+@incollection{wooldridge1995agent,
+  title={Agent theories, architectures, and languages: a survey},
+  author={Wooldridge, Michael and Jennings, Nicholas R},
+  booktitle={Intelligent agents},
+  pages={1--39},
+  year={1995},
+  publisher={Springer}
 }
