fixed author info

--- a/proceedings.tex
+++ b/proceedings.tex
@@ -91,9 +91,9 @@
     \affaddr{ Los Angeles, USA}\\
     %\email{e-mail address}\\
     }
-  \alignauthor{Daniel Rivera \\
+  \alignauthor{Daniel E. Rivera \\
     \affaddr{Arizona State University}\\% Control Systems Engineering Laboratory}\\
-    \affaddr{Phoenix, USA}\\
+    \affaddr{Tempe, USA}\\
     %\email{e-mail address}\\
     }
   \alignauthor{Andrew Raij \\
