fixed nahum2015building ref

--- a/sample.bib
+++ b/sample.bib
@@ -40,7 +40,8 @@
 @article{nahum2015building,
   title={Building health behavior models to guide the development of just-in-time adaptive interventions: a pragmatic framework},
   author={Nahum-Shani, Inbal and Hekler, E and Spruijt-Metz, Donna},
-  journal={To Appear in Health Psychology}
+  journal={To Appear in Health Psychology},
+  publisher={APA}
 }
 
 % === MAYBE USED (from ICHI2015) === :
